refacto InvocationResponse en record + nettoyage